[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super-traveller-mcp"
version = "0.1.0"
description = "智能列车路线搜索MCP服务 - 基于Dijkstra算法搜索最优乘车路线"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
super-traveller-mcp = "super_traveller_mcp.server:main"

[tool.setuptools.packages.find]
include = ["super_traveller_mcp*"]

[tool.setuptools.package-data]
super_traveller_mcp = ["data/*.json"]